[package]
name = "bft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3", features = ["derive"] }

bft_types = { path = "bft_types" }
bft_interp = { path = "bft_interp" }


[workspace]
members = [
    "bft_interp",
    "bft_types",
]